Add login authentication system
- Replace exec selector with username/password login
- Username: first name lowercase, Password: signos
- Updated exec list: Sharam, Roger, Lindsay, Emma, Colin, Dan
- Removed Kate from the list
- Session persists in localStorage

--- a/.netlify/netlify.toml
+++ b/.netlify/netlify.toml
@@ -1,38 +1,16 @@
-redirectsOrigin = "config"
-functionsDirectory = "/Users/dangusz/Exec_Dashboard/signos-offsite-preread/netlify/functions"
-functionsDirectoryOrigin = "config"
-headers = []
+headersOrigin = "config"
+plugins = []
+redirects = []
 
 [functions]
 
-[functions.scheduled-outreach]
-schedule = "0 14 * * 1-5"
-
-[functions.scheduled-intel]
-schedule = "0 13 * * 1"
-
-[functions.scheduled-context-sync]
-schedule = "0 14-23 * * 1-5"
-
 [functions."*"]
-node_bundler = "esbuild"
-
-[[plugins]]
-origin = "config"
-package = "@netlify/plugin-nextjs"
-
-[plugins.inputs]
 
 [build]
-publish = "/Users/dangusz/Exec_Dashboard/signos-offsite-preread/.next"
+publish = "/Users/dangusz/Exec_Dashboard/signos-offsite-preread"
 publishOrigin = "config"
-commandOrigin = "config"
-command = "npx prisma generate && npm run build"
-functions = "/Users/dangusz/Exec_Dashboard/signos-offsite-preread/netlify/functions"
 
 [build.environment]
-NODE_VERSION = "18"
-NPM_FLAGS = "--legacy-peer-deps"
 
 [build.processing]
 
@@ -46,62 +24,8 @@ NPM_FLAGS = "--legacy-peer-deps"
 
 [build.services]
 
-[[redirects]]
-from = "/dashboard"
-to = "/hub"
-status = 301.0
-force = false
+[[headers]]
+for = "/*"
 
-[redirects.query]
-
-[redirects.conditions]
-
-[redirects.headers]
-
-[[redirects]]
-from = "/dashboard/*"
-to = "/hub/:splat"
-status = 301.0
-force = false
-
-[redirects.query]
-
-[redirects.conditions]
-
-[redirects.headers]
-
-[[redirects]]
-from = "/login"
-to = "/hub/login"
-status = 301.0
-force = false
-
-[redirects.query]
-
-[redirects.conditions]
-
-[redirects.headers]
-
-[[redirects]]
-from = "/agents"
-to = "/hub/agents"
-status = 301.0
-force = false
-
-[redirects.query]
-
-[redirects.conditions]
-
-[redirects.headers]
-
-[[redirects]]
-from = "/agents/*"
-to = "/hub/agents/:splat"
-status = 301.0
-force = false
-
-[redirects.query]
-
-[redirects.conditions]
-
-[redirects.headers]
+[headers.values]
+Access-Control-Allow-Origin = "*"
